style.css
html,
body {
    font-family: Arial, Helvetica, sans-serif;
    margin: 0;
    color: #ddd;
    height: 100%;
}

body {
    display: flex;
    background-image: url("bg.jpg");
    backdrop-filter: blur(5px);
    background-size: auto;
    background-position: center, center;
    margin: 0;
    flex-flow: column;
}

@media screen and (max-width: 992px) {
    body {
        flex-flow: column;
    }
}

.divider {
    display: flex;
    flex-flow: column;

    height: 100%;
}

.headline {
    color: rgba(255, 255, 255, 0.8);
    font-size: larger;
}


.sub-headline {
    color: rgba(255, 255, 255, 0.8);
    font-size: larger;
    text-align: center;
}

.file-upload-container {
    display: flex;
    flex-flow: column;
    align-items: center;
    color: #ddd;
    background-color: #13131329;
    backdrop-filter: blur(15px);
    padding: 0;
    padding-bottom: 1em;
    width: 100%;
    height: 100%;
    justify-content: space-around;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
}

.table-flash-container {
    display: flex;
    flex-flow: column;
    align-items: center;
    width: 50%;
    background-color: #1313136b;
    margin: auto;
    border-radius: 15px;
    overflow: visible;
    backdrop-filter: blur(15px);
}

@media screen and (max-width: 992px) {
    .file-upload-container {
        width: 100%;
    }

    .table-flash-container {
        width: 80%;
    }
}


form {
    display: flex;
    justify-content: space-around;
    height: 100%;
    width: 50%;
}

.form-group {
    display: flex;
    flex-flow: column;
    text-align: center;
    width: 100%;
    max-width: 100%;
    justify-content: space-around;
}

#file {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 0%;
    height: 0%;
}

label[for="file"] {
    display: inline-block;
    padding-top: 1em;
    padding-bottom: 1em;
    width: 50%;
    align-self: center;
    background-color: #ddd;
    color: #333;
    border-radius: 5px;
    cursor: pointer;
    margin-bottom: 0.5em;
    transition: all 0.2s ease;
}

input[type="submit"] .progress {
    margin: 2em 0;
    padding: 1em 2em;
    background-color: #333;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.progress-btn {
    position: relative;
    width: 50%;
    height: 50px;
    display: inline-block;
    align-self: center;
    border-radius: 5px;
    background: #f44336;
    font-family: "RobotoDraft", "Roboto", sans-serif;
    color: #fff;
    font-weight: normal;
    font-size: 20px;
    transition: all 0.4s ease;
}

.progress-btn:not(.active) {
    cursor: pointer;
}

.progress-btn .btn {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    line-height: 50px;
    text-align: center;
    z-index: 10;
    opacity: 1;
    transition: all 0.2s linear;
}

.btn:hover {
    text-shadow: 0 0 3px #DBDBDB, 0 0 5px #d3d3d3;
}

.progress-btn .progress {
    width: 0%;
    z-index: 5;
    background: #D32F2F;
    opacity: 0;
    transition: all 0.3s ease;
}

.progress-btn.active .progress {
    opacity: 1;
    animation: progress-anim 10s ease 0s;
}

.progress-btn[data-progress-style='fill-back'] .progress {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    border-radius: 5px;
}

@keyframes progress-anim {
    0% {
        width: 0%;
    }

    5% {
        width: 0%;
    }

    10% {
        width: 15%;
    }

    30% {
        width: 40%;
    }

    50% {
        width: 55%;
    }

    80% {
        width: 100%;
    }

    95% {
        width: 100%;
    }

    100% {
        width: 0%;
    }
}

table.responsive {
    width: 400px;
    text-align: center;
    border-spacing: 0;
    border-radius: 3px;
    height: 100%;
    width: 100%;
}

table.responsive td,
table.responsive th {
    border: 1px solid rgba(36, 36, 36, 0.36);
    padding: 12px 12px;
    border-spacing: 0;
    border-bottom-width: thick;
    color: #fff;
    border-right: 0;
    border-left: 0;
    border-top: 0;
}

table.responsive tbody td {
    font-size: 15px;
    font-weight: bold;
    color: #FFFFFF;
    border-bottom-width: thin;
    border: 0;
}

table.responsive tr:nth-child(even) {
    background-color: rgba(72, 72, 72, 0.52);
}

table.responsive tr:nth-child(odd) {
    background-color: rgba(82, 84, 81, 0.61);
}

table.responsive thead {
    background-color: rgba(46, 47, 45, 0.8);
    border-bottom: 12px solid rgba(49, 49, 49, 0.8);
}

table.responsive thead th {
    font-size: 14px;
    font-weight: bold;
    color: #FFFFFF;
    text-align: center;
    border-left: 2px solid rgba(59, 59, 59, 0.8);
}

table.responsive thead th:first-child {
    border-color: none;
}

table.responsive tfoot td {
    font-size: 13px;
}

table.responsive tfoot .links {
    text-align: right;
}

table.responsive tfoot .links a {
    display: inline-block;
    background: rgba(255, 255, 255, 0.8);
    color: #686868;
    padding: 2px 8px;
    border-radius: 5px;
}

.button {
    border: none;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 2%;
    cursor: pointer;
    display: inline-block;
    padding: 1em 2em;
    background-color: #ddd;
    color: #333;
    border-radius: 5px;

    transition: all 0.2s ease;
}

button[disabled=disabled],
button:disabled {
    border: none;
    color: rgba(83, 83, 83, 0.5);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: not-allowed;
    display: inline-block;
    padding: 1em 2em;
    background-color: #8b8b8b8c;
    color: #333;
    border-radius: 5px;
}

.upload-section {
    background-color: rgba(128, 128, 128, 0.3);
    padding: 20px;
    margin-bottom: 20px;
}

.table-section {
    background-color: rgba(128, 128, 128, 0.3);
    padding: 20px;
}

#table-flash-container,
#table-flash-container table input[type=checkbox] {
    opacity: 1;
    pointer-events: auto;
}


#table-flash-container {
    background-color: #f7f7f7;
    padding: 20px;
    margin-top: 20px;
    opacity: 0.5;
    pointer-events: none;
}

#table-flash-container input[type=checkbox] {
    opacity: 0.5;
    pointer-events: none;
}

#table-flash-container #flash-button {
    opacity: 0.5;
    pointer-events: none;
}

#table-flash-container.enabled {
    opacity: 1;
    pointer-events: auto;
}

#table-flash-container.enabled input[type=checkbox] {
    opacity: 1;
    pointer-events: auto;
}

#table-flash-container.enabled #flash-button {
    opacity: 1;
    pointer-events: auto;
}

.drive-checkbox {
    scale: 145%;
}

#selected-file-name {
    margin-top: 10px;
    color: #ddd;
    background-color: #FFF0;
    font-size: large;
    text-align: center;
    border: 2.5px solid grey;
    border-style: dashed;
    padding: 1.5em;
    transition: all 0.5s ease;
    align-self: center;
    width: auto;
}

#selected-file-name:hover {
    border-color: #af73af;
    color: #6e206e;
    transform: scale(1.3);
    white-space: nowrap;
}

/* for dragover effect with file */
#selected-file-name.is-dragover {
    border-color: #508C50;
    color: #91df91;
    font-size: x-large;
}

.form-group label:hover {
    filter: invert(1);
}

.button:hover {
    background-color: #508C50;
}

.button.btnFlash:hover:disabled {
    color: #ddd;
    background: #cc4646;
}

.button.btnFlash:hover:enabled {
    color: #ddd;
    background: green;
}

.tooltip {
    position: relative;
    display: flex;
    margin: 2%;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: auto;
    background-color: rgb(99, 99, 99);
    color: #ddd;
    text-align: center;
    border-radius: 6px;
    padding: 6px;
    position: absolute;
    z-index: 1;
    top: 100%;
    left: -50%;
    opacity: 0;
    transition: visibility 0.5s ease-out, opacity 0.5s ease-out;
    transition-delay: 0.5s;
    white-space: nowrap;
}

.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    bottom: 100%;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent rgb(99, 99, 99) transparent;
    left: 50%;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}

.mode-selection {
    display: flex;
    flex-flow: column;
    display: flex;
    align-items: center;
    padding: 0;
    width: 50%;
    height: 50%;
    background-color: #1313132b;
    margin: auto;
    border-radius: 15px;
    backdrop-filter: blur(15px);
    overflow: visible;
}

@media screen and (max-width: 992px) {
    .mode-selection {
        width: 80%;
    }
}


/* Style the tab */
.tab {
    background-color: #6e6e6e0f;
    width: 100%;
    border-radius: 15px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    overflow: clip;
}

/* Style the buttons inside the tab */
.tab button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    /*  padding: 14px 16px;*/
    padding: 1em;
    transition: 0.3s;
    font-size: 17px;
    width: 50%;
    color: #ddd;
    font-weight: bold;
    transition: all 0.2s ease;
}

/* Change background color of buttons on hover */
.tab button:hover {
    color: #fff;
    background-color: #f443369c;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #f44336;
    color: #fff;
}

.tab button.active:hover {
    text-shadow: 0 0 3px #DBDBDB, 0 0 5px #d3d3d3;
}

/* Style the tab content */
.tabcontent {
    display: none;
    border: none;
    width: 100%;
    height: 100%;
    flex-flow: column;
}

.file-upload-container {
    width: 100%;
}

.select-fs {
    width: 20%;
    text-align: center;
    font-size: medium;
}

